[project]
name = "test-google-genai"
version = "0.1.0"
description = "Google GenAI / Vertex AI API testing with proper authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "google-auth",
    "google-cloud-aiplatform",
    "sentry-sdk",
    "pip>=25.2",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
sentry-sdk = { path = "../../sentry-python", editable = true }
